💄 fixes to aligning sidebar

--- a/files/css/_base.scss
+++ b/files/css/_base.scss
@@ -447,22 +447,6 @@ search {
     }
 }
 
-.side-content-container {
-    grid-template-columns: auto 350px;
-
-    &.flipped {
-        grid-template-columns: 350px auto;
-
-        & > .content:last-child {
-            order: -1;
-        }
-    }
-
-    & > .content:last-child {
-        /* border-left: 2px solid #00000033; */
-    }
-}
-
 .stagger {
     --stagger-index: 0;
     transition:
