--- a/files/css/future.scss
+++ b/files/css/future.scss
@@ -136,6 +136,10 @@ aside {
 
     & > .card {
         @extend .flex, .down, .but-mobile-right;
+
+        max-height: calc(100vh - 4em);
+        flex-wrap: nowrap;
+        overflow: auto;
     }
 }
 
@@ -375,6 +379,7 @@ main {
 
         & > .card {
             justify-content: center;
+            flex-wrap: wrap;
         }
     }
 
